<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CharDhamYatra</string>
    <string name="name1">CharDham<b>Yatra</b></string>
    <string name="sonprayag">The mesmerisingly beautiful settlement of Sonprayag is located around 20 km away on the route to Kedarnath. Situated at the confluence of two sacred rivers, Basuki and Mandakini, Sonprayag offers a scintillating view of snow covered mountains and the lush green Sonprayag valley.</string>
    <string name="chorbari">The mighty Chorbari (Chorabari) Bamak Glacier, the origin of River Mandakini, is located about 2 km upstream from Kedarnath, with a trail leading from the Kedarnath temple to the glacier snout. Several hanging glaciers and avalanche chutes feed the 6-km-long glacier located at about 3,820 m. It is a popular trekking trail.</string>
    <string name="mount_kedarnath">Mount Kedarnath or the Kedarnath peak, also called Kedarnath Main by mountaineers, is the imposing mountain that is visible behind the Kedarnath temple. Considered auspicious by pilgrims, the snow-draped peak at an altitude of around 6,940 m is a challenging climb for professionals from across the world. The Kedarnath peak and the Kedarnath Dome are part of the Gangotri group of peaks in the western Garhwal Himalayas. Kedarnath is the highest peak on the south side of the Gangotri glacier, and Kedarnath Dome is the third highest.</string>
    <string name="kedar_dome">Kedar Dome is a majestic, dome-shaped peak standing at a height of 6,831 m within the folds of the Garhwal Himalayas. Named after Lord Shiva, the mountain forms the backdrop to the Kedarnath temple. It attracts mountaineers from across the world, who mostly attempt climbing from its northwestern flank. The peak is also ideal for ski ascents and is popular among professional skiers. The trek to Kedar Dome is easy but requires high altitude trekking experience. It offers great views of the Gangotri glacier, Gangotri peaks, and the stunning Mount Kedarnath.</string>
    <string name="kedar_wildlife">The lush Kedarnath Wildlife Sanctuary, bordered by Kedarnath and Chaukhamba peaks, is home to the rare Himalayan musk deer, a reason why its also known as the Kedarnath Musk Deer Sanctuary. Spread over approximately 975 sq km, the sanctuary has a large number of temples located within its precincts, the Kedarnath temple being the most popular.</string>
    <string name="adi_shankaracharya">One of the most popular attractions in Kedarnath, the Adi Shankaracharya Samadhi is believed to be the place where sage Adi Shankaracharya attained Moksha (freedom from physical body). It is located just behind Kedarnath temple. A hot water spring nearby is believed to have the cure to all human sufferings.</string>
    <string name="sumeru">A 6,350-m-high mountain in the Gangotri region, it is the closest neighbour of Kedar Dome. This mountain is encircled by several peaks and the trekking route passes through crystal clear lakes, glacier moraines, ice sheets and snow-capped mountains.</string>
    <string name="mayali_pass">Situated at an elevation of 5,300 m, this pass is just 15 km from Kedarnath. The moderately challenging trek to this pass offers spectacular views of Masar Tal and Vasuki Tal along with Thalay Sagar, Kedar dome and other peaks of the Gangotri region.</string>
    <string name="vasuki">At a distance of 8 km from Kedarnath, this beautiful lake is situated at an altitude of 4,135 m. Set in the midst of snowy mountains this lake provides a charming view of the massive Chaukhamba peaks. The trek to the lake passes through the Chaturangi and Vasuki glaciers. Locals say the lake draws its name from its shape, which resembles serpent king Vasuki wrapped around Lord Shivas neck.</string>
    <string name="gandhi_sarovar">The Chorabari Lake or the Gandhi Sarovar, a permanent waterbody on the side of the glacier, is where some of Mahatma Gandhis ashes were immersed in 1948. The small lake with crystal clear water is situated at the mouth of the Chorbari Bamak glacier and is at the foot of the Kedarnath and Kirthi Stambh peaks. The grassy landscape and beautiful Madhu Ganga waterfall en route to this lake make the trek memorable. The best time to get the most scintillating view is during morning as the weather of this place changes abruptly.</string>
    <string name="gaurikund">This sacred hot water spring is considered to be one of the holiest sites for Hindu devotees, who take a dip in it to “wash away sins”. Nestled amidst snow-capped peaks and panoramic views of the Himalayas, Gaurikund is the starting point of the 16-km trek to the Kedarnath shrine. Devotees believe that this was the site where Goddess Parvati, Lord Shivas divine consort, had meditated to win Lord Shiva as her husband. A temple dedicated to the goddess is also located here.</string>
    <string name="vasudhara_falls">Around 10 km from Badrinath is located the majestic Vasudhara falls gushing down a bare rock-face from around 122 m. A trek of around 10 km from Badrinath will bring you to this beautiful waterfall.</string>
    <string name="satopanth_tal">Satopanth Tal is a pristine glacial lake surrounded by mighty peaks like Chaukhamba, Neelkantha, Swargarohini and Balakun. This triangular lake is a challenging trek (25 km from Badrinath) and one of the hidden gems of the Garhwal region. Locals say this lake is where gods Brahma, Vishnu and Shiva meditated. The lake also finds a mention in tales around the epic Mahabharata. The trek to Satopanth is takes you past Mana, India’s last village, the popular Vasudhara waterfall and the Sahastradhara falls.</string>
    <string name="hemkund_sahib">This beautiful gurudwara, also known as Gurudwara Shri Hemkund Sahib Ji, is situated on the bank of the pristine Hemkund lake at the base of the Saptshringi Glacier. One of the most revered of Sikh shrines, Hemkund Sahib draws thousands of pilgrims every year. Surrounded by seven snow-capped peaks, the gurudwaras picturesque natural settings and trek routes, including the one to the Valley of Flowers, make it a popular destination for trekkers and tourists as well. You can reach this majestic lake through a challenging trek from Ghangharia.</string>
    <string name="hot_springs">Narada Kund, Surya Kund and Tapt Kund are the three thermal springs popular among devotees in Badrinath. Narada Kund, named after divine sage Narada, is said to be the place when the sage had written the holy scripture Narada Bhakti Sutra. It is said that the idol of Lord Vishnu was discovered at Narada Kund. </string>
    <string name="bheem_pul">Legends say that this stone bridge on River Saraswati near Badrinath was built by Bheem when the Pandavas (from the epic Mahabharata) walked through the Mana village on their way to heaven. The stunning bridge and the fierce river gushing underneath is a breathtaking sight</string>
    <string name="mana_village">Located on the banks of River Saraswati and surrounded by the breathtaking Himalayan peaks, at an altitude of around 3,000 m, Mana is the last Indian village towards the international border. With small houses and narrow lanes leading up towards the mountains, the village is pretty like in a fairytale. It falls on several popular trekking routes and is around 4 km from Badrinath.</string>
    <string name="vyas_gufa">This is a sacred site near Badrinath at a distance of 4km. It is said that it was here that the great sage Ved Vyas documented the epic Mahabharata with the help of Lord Ganesha. It is said that when Lord Ganesha was writing, the loud noise of River Saraswatis waters disturbed him. He requested Goddess Saraswati to reduce the noise but when she did not pay heed, the sage cursed  Sarawati that no one would ever see the river beyond that point. It is believed that River Saraswati goes underground near Vyas Gufa and resurfaces at Prayag. A unique feature of the cave is its roof that resembles the pages of a holy script.</string>
    <string name="kharsali">A quaint Himalayan village, Kharsali is about 8km from Yamunotri. Quiet and rustic, Kharsali offers a fine example of rural Uttarakhand with warm and smiling people and wooden and stone houses. Walk around and explore the village at your pace.</string>
    <string name="saptarshi_kund">Located around 10km from Yamunotri, this glacial lake (at an altitude of 4,421m) is fed by the Champasar Glacier, and is the actual source of the Yamuna river. While pilgrims offer their prayers at the more accessible Yamunotri temple at the foot of the mountain, the trek from the temple to the lake attracts professional mountaineers. It is an arduous trek but the sight of the emerald blue lake surrounded by frozen glaciers, is stunning. The lake is also said to be the source of the rare lotus Brahma Kamal.</string>
    <string name="hanuman_chatti">Located at the confluence of  Hanuman Ganga and Yamuna rivers, the serene hamlet of Hanuman Chatti is located around 13km en route Yamunotri Dham. Nestled in the Himalayas and surrounded by dense forests, Hanuman Chatti (at an altitude at 2,400m) makes for a refreshing stop. While devotees halt here to take the blessings of Lord Hanumana, for trekkers, this is a popular stop on way to Dodi Tal and other destinations.</string>
    <string name="janki_chatti">A hamlet that comes to life during the Char Dham Yatra season (May to October), Janki Chatti is popular for its natural splendour. It is around 6km from Yamunotri Dham and is surrounded by high mountains on all sides. Earlier, the starting point of the trek to reach Yamunotri was Hanuman Chatti (around 13km away), but now a motorable road can take you up to Janki Chatti.</string>
    <string name="yamunotri_temple">The Yamunotri temple is dedicated to Goddess Yamuna, who is said to be the daughter of Lord Surya (sun) and the sister of Yama (the god of death). An intricately carved idol of Goddess Yamuna in polished black ebony stands inside the temple. Sitting next to the gurgling Yamuna river, the bright yellow and vermillion coloured temple is visible from a distance, dramatically set against the steep mountain face. Two natural hot springs, Surya Kund and Gouri Kund, flank the temple. Devotees dip rice and vegetables in the springs, as a divine offering. Devotees also pray at Divya Shilla, a reddish brown rock near Surya Kund. The temple is said to have been built in 1839 AD and rebuilt in the 19th century.</string>
    <string name="kedar_tal">Kedartal, popularly known as Lord Shiva’s lake, is a stunning circle of emerald encircled by towering snow-covered peaks. While the around 18km trek from Gangotri to the glacial lake is challenging, the sight of the clear water reflecting the almost perfect Thalaysagar peak, is a one-in-a-lifetime experience. It is one of the highest glacial lakes (approx 4,912 m) in Uttarakhand. It is awe-inspiring to stand by the lake and look around to an almost panoramic view of some of the highest Himalayan peaks: Manda, Bhrigupanth, Meru and Thalaysagar.</string>
    <string name="tapovan">A scenic meadow located at an altitude of around 4,463m, Tapovan, is around 25km from Gangotri. It is the base camp for climbing several peaks like Shivling and Bhagirathi and is said to be one of the most beautiful high-altitude meadows. Nearby is Nandanvan, a meadow at the base of the Bhagirathi massif.</string>
    <string name="bhairon_ghati">Located near the confluence of Jat Ganga and Bhagirathi rivers is the scenic Bhairon Ghati valley. Around 10km from Gangotri, it is known for the temple of Bhairav Nath, which sits amidst dense forests.</string>
    <string name="gaumukh">The glacial source of River Ganges, this is the place where you can witness the stream that gushes out of a snout-like opening in the glacier and flows down as Bhagirathi. The trek from Gangotri to Gaumukh is moderately challenging can be completed in around 10 hours.</string>
</resources>